module2-solution/css/style.css
* {
	box-sizing: border-box;
}

body {
	font-family: sans-serif;
	margin: 0 auto;
	padding: 20px 10%;
	word-wrap: break-word;
}

h1.firstheading {
	text-align: center;
}

.container .row {
	width: 100%;
}

.row > div > .item {
	background-color: #999;
	border: 1px solid #000;
	position: relative;
	padding: 40px 20px 20px;
	margin: 10px;
}

.row > div > .item > p {
	margin: 0;
}

.row h4 {
	margin: 0;
	outline: 1px solid #000;
	padding: 5px 0;
	position: absolute;
	right: 0;
	text-align: center;
	top: 0;
	width: 150px;
}

.chicken h4 {
	background-color: #d59898;
}

.beef h4 {
	background-color: #c14543;
	color: #fff;
}

.sushi h4 {
	background-color: #e5d198;
}


/* Responsive */
@media only screen and (max-width: 767px) {

	.row > div h4 {
		max-width: 80%;
	}

	.col-sm-12 {
		width: 100%;
		margin-bottom: 10px;
	}
}

@media only screen and (min-width: 768px) and (max-width: 991px ) {

	.col-md-6 {
		float: left;
		width: calc(50%);
	}
	.col-md-12 {
		float: left;
		width: 100%;
	}
}

@media only screen and (min-width: 992px) {

	.col-lg-4 {
		float: left;
		width: calc(33.33%);
	}

}

